# eddiner

./: .gitignore  Cargo.toml  README.md  wrangler.toml.sample
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md
benches/: bench_dat.rs
migrations/: initial.sql  initial_infos.sql  initial_responses.sql  initial_threads.sql
migrations/add-attributes-into-threads_2023-12-15/: down.sql  up.sql
migrations/add-board-id-into-responses_2023-10-26/: down.sql  up.sql
migrations/add-board-infos-into-boards_2023-11-11/: down.sql  up.sql
migrations/add-delete-column-into-responses_2023-11-01/: down.sql  up.sql
migrations/add-last-thread-creation_2023-10-21_2/: down.sql
migrations/add-timestamp-to-res_2023-10-19/: down.sql
migrations/add-token-into-threads_2023-10-21/: up.sql
migrations/threads/add-attributes-into-threads_2023-12-24/: down.sql  up.sql
src/: authed_cookie.rs  board.rs  board_config.rs  cap.rs  grecaptcha.rs  inmemory_cache.rs  lib.rs  response.rs  routes.rs  schema.sql  thread.rs  tinker.rs  turnstile.rs  utils.rs
src/migrations/: initial.sql
src/migrations/add-archive-table_2023-10-16_2/: down.sql  up.sql
src/migrations/add-last-thread-creation_2023-10-21_2/: up.sql
src/migrations/add-samba-24_2023-10-09/: down.sql  up.sql
src/migrations/add-timestamp-to-res_2023-10-19/: down.sql  up.sql
src/migrations/add-token-into-responses_2023-10-16/: down.sql  up.sql
src/migrations/add-token-into-threads_2023-10-21/: down.sql
src/migrations/add-unique-index_2023-10-12/: down.sql  up.sql
src/migrations/auth-improvement_2023-10-04/: down.sql  up.sql
src/migrations/threads-add-index_2023-10-07/: down.sql  up.sql
src/repositories/: bbs_repository.rs
src/routes/: auth.rs  auth_code.rs  bbs_cgi.rs  dat_routing.rs  head_txt.rs  liveedge.rs  setting_txt.rs  subject_txt.rs  webui.rs
src/routes/templates/: auth_code_getting.html  auth_failed.html  auth_getting.html  auth_successful.html  board.html  head.txt  index.html  liveedge.html  request_authentication.html  request_authentication_code.html  request_authentication_local.html  thread.html  webui_disabled.html  writing_failed_html_response.html  writing_success_html_response.html
src/services/: auth_verification.rs
tools/: register_token.py
