[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.21.4"
chrono = { version = "0.4.31", features = ["serde"] }
cookie = "0.17.0"
encoding_rs = "0.8.33"
md-5 = "0.10.6"
pwhash = "1.0.0"
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
reqwest = { version = "0.11.20", features = ["multipart"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha1 = { version = "0.10.6", default-features = false }
worker = { version = "0.0.18", features = ["d1"] }
getrandom = { version = "0.2.10", features = ["js"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
