[package]
name = "eddiner"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
# 'lib' is required for bench, test, and child packages
crate-type = ["lib", "cdylib"]

[dependencies]
base64 = "0.22"
chrono = { version = "0.4.31", features = ["serde"] }
cookie = "0.18"
encoding_rs = "0.8.33"
md-5 = "0.10.6"
pwhash = "1.0.0"
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
reqwest = { version = "0.12", features = ["multipart"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha1 = { version = "0.10.6", default-features = false }
worker = { version = "0.0.21", features = ["d1"] }
getrandom = { version = "0.2.10", features = ["js"] }
minijinja = { version = "1.0.8", default-features = false, features = [
    "builtins",
] }
regex-lite = "0.1.0"
anyhow = "1.0.75"
tokio = { version = "1.34.0", features = ["macros"], default-features = false }
tokio-macros = { version = "2.2.0" }
jwt-simple = "0.12.1"
sha2 = "0.10.8"

[dev-dependencies]
criterion = { version = "0.5" }

[[bench]]
name = "bench_dat"
harness = false

[profile.release]
lto = true
strip = true
codegen-units = 1
